@startuml
class Paciente {
  - String id
  - String nombres
  - String apellidos
  - String telefono
  - String correo
  - LocalDate fechaNacimiento
  - Sexo sexo
}

class Medico {
  - String id
  - String nombres
  - String apellidos
  - String especialidad
}

class Prueba {
  - String id (Codigo)
  - String nombre
  - double precio
  - double refMin
  - double refMax
}

class Perfil {
  - String id
  - String nombre
  - List<Prueba> pruebas
}

class Orden {
  - String id
  - EstadoOrden estado
  - double costoTotal
  - double abono
}

class Abono {
  - String id
  - double monto
  - LocalDateTime fecha
}

class Resultado {
  - double valor
  - String alerta
  + void validarRango()
}

Orden "1" *-- "many" Abono : contiene
Orden "1" *-- "many" Resultado : contiene
Orden "1" o-- "many" Prueba : solicita
Orden "many" --> "1" Paciente : pertenece a
Orden "many" --> "1" Medico : prescrita por
Resultado "many" --> "1" Prueba : corresponde a
Perfil "1" o-- "many" Prueba : agrupa
@enduml
